@@ -2,6 +2,13 @@ Changelog for CPAN-Testers-Schema
 
 {{ $NEXT }}
 
+    [Fixed]
+
+    - Fixed test that starts a MySQL server to run JSON pointer tests.
+      JSON support was added in MySQL 5.7, and cannot run on any MySQL
+      prior to that. Now the tests check that the MySQL is the right
+      version before continuing.
+
 0.014     2017-07-06 22:56:21-05:00 America/Chicago
 
     [Added]
